Fixes login display on mobile and desktop with any amount of login options

--- a/cps/static/css/caliBlur.css
+++ b/cps/static/css/caliBlur.css
@@ -8542,7 +8542,6 @@ a#remote_login {
     padding: 6px 30px 5px;
     border: transparent solid 1px;
     border-radius: 4px;
-    margin-bottom: 3rem;
 }
 
 .login .well > form {
